updated Swagger documentation
